# gamekit

./: .gitignore  Cargo.toml  LICENSE  README.md  no-rust-toolchain.toml  rustfmt.toml
compiler/: Cargo.toml
compiler/resources/shaders/: logo.frag  particles.frag  shader.vert
compiler/src/: main.rs
examples/hello/: Cargo.toml  build.rs  manifest.json
examples/hello/resources/shaders/: fragment_shader.frag  vertex_shader.vert
examples/hello/src/: main.rs
examples/particles/: Cargo.toml  manifest.json
examples/particles/resources/shaders/: sprite_shader.frag  vertex_shader.vert
examples/particles/resources/textures/: charset.ctm
examples/particles/src/: entity.rs  main.rs
examples/scrolling/: Cargo.toml  build.rs  manifest.json
examples/scrolling/resources/shaders/: fragment_shader.frag  vertex_shader.vert
examples/scrolling/src/: main.rs  tilemap.rs
examples/shoot/: Cargo.toml  build.rs  manifest.json
examples/shoot/resources/bitmaps/: palette.gpl  palette.hex  palette.pal  palette.txt
examples/shoot/resources/shaders/: vertex_shader.vert
examples/shoot/resources/textures/: sprites.pmp  spritesheet.asd.json
examples/shoot/src/: main.rs
examples/tilemap/: Cargo.toml  manifest.json
examples/tilemap/resources/maps/: map.ldtk  testmap.ldtk
examples/tilemap/resources/shaders/: background.frag  background.vert
examples/tilemap/src/: main.rs
gamebuilder/: Cargo.toml
gamebuilder/src/: compiler.rs  lib.rs  manifest.rs
gamekit/: Cargo.toml  build.rs  manifest.json
gamekit/resources/shaders/: tilemap_fragment_shader.frag  tilemap_vertex_shader.vert
gamekit/src/: animator.rs  api.rs  audio.rs  bitmap.rs  blitter.rs  buffer.rs  builtin.rs  compiler.rs  constants.rs  data.rs  device.rs  error.rs  exec.rs  font.rs  globals.rs  image.rs  input.rs  instance.rs  lib.rs  logger.rs  macros.rs  manifest.rs  maps.rs  material.rs  math.rs  metrics.rs  options.rs  pipeline.rs  primitives.rs  random.rs  renderer.rs  resources.rs  shader.rs  sprite.rs  state.rs  swapchain.rs  task.rs  texture.rs  types.rs  window.rs
test/: manifest.json
