[package]
name = "gamekit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
cgmath = "0.18.0"
sdl2 = "0.36.0"
ash = { version = "0.38", default-features = false, features = ["linked", "debug", "std"] }
image = "0.25.1"
rand = "0.8.5"
json5 = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
