[package]
name = "gamekit"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
cgmath = "0.18.0"
sdl2 = { version = "0.37", default-features = false, features = ["mixer"] }
ash = { version = "0.38", default-features = false, features = ["linked", "debug", "std"] }
image = "0.25.1"
rand = "0.8.5"
json5 = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
