[package]
name = "gamekit"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
log.workspace = true
cgmath.workspace = true
gamebuilder.workspace = true

sdl2 = { version = "0.37", default-features = false, features = ["mixer"] }
ash = { version = "0.38", default-features = false, features = ["linked", "debug", "std"] }
image = "0.25.1"
rand = "0.9.1"
json5 = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
gamebuilder.workspace = true
